# logfowd2

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  config.json  docker-compose.yml  rust-toolchain.toml
.github/workflows/: main.yml
helm/: namespace-logging.json
helm/logfowd2/: Chart.yaml  values.schema.json  values.yaml
helm/logfowd2/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  ingress.yaml  service.yaml  serviceaccount.yaml  statefulset.yaml
src/: channels.rs  circuit_breaker.rs  conf.rs  dead_letter_queue.rs  error.rs  es.rs  es_worker_pool.rs  event_bridge.rs  events.rs  file.rs  file_tracker.rs  integration_tests.rs  main.rs  metadata_cache.rs  metrics.rs  metrics_server.rs  notify_bridge.rs  requests.rs  retry.rs  sender.rs  signals.rs  state.rs  task_pool.rs  traits.rs  watcher.rs
src/config/: mod.rs  settings.rs
src/domain/: event.rs  file.rs  mod.rs  state.rs
src/infrastructure/: mod.rs
src/infrastructure/elasticsearch/: circuit_breaker.rs  dead_letter_queue.rs  mod.rs  pool.rs
src/infrastructure/filesystem/: metadata_cache.rs  mod.rs  notify.rs
src/infrastructure/metrics/: collector.rs  mod.rs  server.rs
src/transport/: mod.rs
src/transport/bridge/: event_bridge.rs  mod.rs
src/transport/channels/: bounded.rs  mod.rs
