[package]
name = "logfowd2"
version = "0.1.0"
edition = "2024"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.22"
json_env_logger2 = "0.2.0"
kv-log-macro = "1.0.7"
tokio = { version = "1.42.0", features = ["full"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_derive = "1.0.215"
serde_json = "1.0.133"
bytes = "1.9.0"
futures = "0.3.31"
libc = "0.2.167"
async-trait = "0.1.84"
notify = "6.1.1"
reqwest = { version = "0.12.9", default-features = false, features = ["rustls-tls", "json"] }
chrono = { version = "0.4.38", features = ["serde"] }
regex = "1.11.1"
async-channel = "2.3.1"
sha2 = "0.10.8"
tempfile = "3.8.0"
prometheus = "0.13"
axum = "0.7"
tower = "0.4"
thiserror = "1.0"

[dependencies.uuid]
version = "1.4.0"
features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
]
