[package]
name = "logfowd2"
version = "0.2.0"
edition = "2024"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "time"] }
tokio = { version = "1.48.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_derive = "1.0.228"
serde_json = "1.0.145"
bytes = "1.10.1"
futures = "0.3.31"
libc = "0.2.177"
async-trait = "0.1.89"
notify = "6.1.1"
reqwest = { version = "0.12.24", default-features = false, features = ["rustls-tls", "json"] }
chrono = { version = "0.4.42", features = ["serde"] }
regex = "1.12.2"
async-channel = "2.5.0"
sha2 = "0.10.9"
tempfile = "3.23.0"
prometheus = "0.14"
axum = "0.7"
tower = "0.4"
thiserror = "1.0"
anyhow = "1.0"

[dependencies.uuid]
version = "1.18.1"
features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
]
