[package]
name = "logfowd2"
version = "0.5.1"
edition = "2024"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json", "time"] }
tokio = { version = "1.49.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_derive = "1.0.228"
serde_json = "1.0.149"
bytes = "1.11.1"
futures = "0.3.32"
libc = "0.2.182"
async-trait = "0.1.89"
notify = "8.2.0"
reqwest = { version = "0.13.2", default-features = false, features = ["rustls", "json"] }
chrono = { version = "0.4.43", features = ["serde"] }
regex = "1.12.3"
async-channel = "2.5.0"
sha2 = "0.10.9"
tempfile = "3.25.0"
prometheus = "0.14.0"
axum = "0.8.8"
tower = "0.5.3"
thiserror = "2.0.18"
anyhow = "1.0.101"

[dependencies.uuid]
version = "1.21.0"
features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
]
